Implement better boundary weighting

--- a/notebooks/cno_inference_demo.ipynb
+++ b/notebooks/cno_inference_demo.ipynb
@@ -122,14 +122,15 @@
         "(No pretraining) \"../TrainedModels/PINO_CNO_no_pretrainingpoisson\"\n",
         "(With pretraining and new loss) \"../TrainedModels/PINO+_CNO_pretrainedpoisson\"\n",
         "(No pretraining and new loss) \"../TrainedModels/PINO+_CNO_no_pretrainingpoisson\"\n",
-        "\n",
+        "(With pretraining and new loss and boundary weight 100) \"../TrainedModels/PINO+B_CNO_pretrainedpoisson\"\n",
+        "(No pretraining and new loss and boundary weight 10) \"../TrainedModels/PINO+B_CNO_no_pretrainingpoisson\"\n",
         "\n",
         "\n",
         "'''\n",
         "\n",
         "\n",
         "# Define model folder path\n",
-        "model_folder = \"../TrainedModels/PINO+_CNO_pretrainedpoisson\"\n",
+        "model_folder = \"../TrainedModels/PINO+B_CNO_pretrainedpoisson\"\n",
         "\n",
         "# Load training properties\n",
         "training_props_df = pd.read_csv(os.path.join(model_folder, 'training_properties.txt'), \n",
