Setup and explore data loading for Helmholtz dataset

--- a/notebooks/poisson_data_tutorial.ipynb
+++ b/notebooks/poisson_data_tutorial.ipynb
@@ -56,9 +56,14 @@
         "import torch\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "from Problems.CNOBenchmarks import SinFrequency\n",
         "import sys\n",
         "import os\n",
+        "\n",
+        "# Add parent directory to path to import project modules\n",
+        "if '..' not in sys.path:\n",
+        "    sys.path.append('..')\n",
+        "\n",
+        "from Problems.CNOBenchmarks import SinFrequency\n",
         "\n",
         "# Set device\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -388,37 +393,6 @@
         "plt.tight_layout()\n",
         "plt.suptitle('Comparison Across Data Splits', fontsize=16, y=1.02)\n",
         "plt.show()\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
-      "source": [
-        "## 8. Summary\n",
-        "\n",
-        "This tutorial demonstrated:\n",
-        "\n",
-        "1. **Data Loading**: How to use the `SinFrequency` class to load Poisson equation data\n",
-        "2. **Data Structure**: Understanding the input/output format and normalization\n",
-        "3. **Visualization**: Multiple ways to visualize the data (2D heatmaps)\n",
-        "4. **Data Iteration**: How to iterate through batches during training\n",
-        "5. **Data Splits**: Accessing training, validation, and test sets\n",
-        "\n",
-        "### Key Points:\n",
-        "- Input data represents the source term f(x,y) in the Poisson equation ∇²u = f\n",
-        "- Output data represents the solution u(x,y)\n",
-        "- Data is normalized to [0,1] range for better training stability\n",
-        "- The framework supports different spatial resolutions and Fourier features\n",
-        "- All data loaders return PyTorch tensors ready for training\n",
-        "\n",
-        "### Next Steps:\n",
-        "- Use this data loading framework with your CNN models\n",
-        "- Experiment with different batch sizes and data augmentation\n",
-        "- Try adding Fourier features by setting `FourierF > 0` in network properties\n"
       ]
     }
   ],
