--- a/notebooks/debug_poisson_pdeloss_finite.ipynb
+++ b/notebooks/debug_poisson_pdeloss_finite.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,17 @@
      "output_type": "stream",
      "text": [
       "No ROCm runtime is found, using ROCM_HOME='/opt/rocm'\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Poisson_loss' from 'Physics_NO.loss_functions.ModulePDELoss' (/cluster/home/lkellijs/camlab-pino/notebooks/../Physics_NO/loss_functions/ModulePDELoss.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 15\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mProblems\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mCNOBenchmarks\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SinFrequency \u001b[38;5;28;01mas\u001b[39;00m CNO_SinFrequency\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mProblems\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mFNOBenchmarks\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SinFrequency \u001b[38;5;28;01mas\u001b[39;00m FNO_SinFrequency\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mPhysics_NO\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mloss_functions\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mModulePDELoss\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Loss_PDE, Poisson_loss, Laplace, Unnormalize\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Poisson_loss' from 'Physics_NO.loss_functions.ModulePDELoss' (/cluster/home/lkellijs/camlab-pino/notebooks/../Physics_NO/loss_functions/ModulePDELoss.py)"
      ]
     }
    ],
